# ai-pen-test

./: .gitignore  Makefile  README.md  SECURITY.md  cli.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pen-test-pr.yml  pen-test-scheduled.yml
benchmark/: README.md  RUN_PAID_PASS.md  RUN_SUBSCRIPTION_PASS.md  aggregate_runs.py  score.py
benchmark/results/: ai_pen_test_DRYRUN_owasp.findings.json  ai_pen_test_DRYRUN_owasp.json  ai_pen_test_DRYRUN_securityeval.aggregate.json  ai_pen_test_DRYRUN_securityeval.findings.json  ai_pen_test_DRYRUN_securityeval.json  ai_pen_test_securityeval.findings.json  ai_pen_test_securityeval.json  codeql_owasp.json  codeql_securityeval.findings.json  codeql_securityeval.json  semgrep_owasp.findings.json  semgrep_owasp.json  semgrep_securityeval.findings.json  semgrep_securityeval.json
benchmark/runners/: ai_pen_test_runner.py  codeql_runner.py  normalize.py  semgrep_runner.py
benchmark/scripts/: build_handful_subsets.py  build_overnight_subset.py  build_owasp_index.py  build_securityeval_index.py  codex_smoke.py  fetch_datasets.sh
benchmark/tests/: test_score.py
handlers/: __init__.py  codebase_detector.py  crypto_analyzer.py  finding_aggregator.py  llm_provider.py  openrouter_client.py  parallel_sast.py  report_generator.py  sast_analyzer.py  xpath_analyzer.py
instructions/: reporting.md  security-review.md
resources/: attack_vectors.json  false_positive_filters.txt  severity_matrix.json
resources/report_templates/: executive_summary.md  finding_detail.md
tests/: __init__.py  test_finding_aggregator.py  test_fixtures_simple.py  test_llm_provider.py  test_openrouter_client.py  test_sast.py  test_sast_openrouter.py
tests/fixtures/: README.md  secure_code.py  vulnerable_code.py
tests/fixtures/secure/: auth_safe_bcrypt.py  idor_safe_authorization.py  path_traversal_safe.py  sqli_safe_parameterized.py  xss_safe_escaped.py
tests/fixtures/vulnerable/: auth_001_hardcoded.py  auth_002_weak_session.py  (+24 more)
