[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pen-test"
version = "0.1.0"
description = "LLM-backed semantic SAST engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ian Kar"}
]
keywords = ["security", "sast", "static-analysis", "owasp", "vulnerability-scanning", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]
full = [
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/iankar8/ai-pen-test"
Repository = "https://github.com/iankar8/ai-pen-test"
Issues = "https://github.com/iankar8/ai-pen-test/issues"

[project.scripts]
ai-pen-test = "cli:main"

[tool.setuptools]
packages = ["handlers"]
py-modules = ["cli"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
